added: p054 with remove & del method.

--- a/python_algorithm/pyPractice/p051to060.ipynb
+++ b/python_algorithm/pyPractice/p051to060.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2719cff9",
+   "id": "feebf88b",
    "metadata": {},
    "source": [
     "### 051 리스트 생성\n",
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0141c47b",
+   "id": "0ce02de7",
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16a8735d",
+   "id": "58a80843",
    "metadata": {},
    "source": [
     "### 052 리스트에 원소 추가\n",
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c796370d",
+   "id": "da50cff6",
    "metadata": {},
    "outputs": [
     {
@@ -66,10 +66,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e319cd6d",
+   "id": "7711ffd5",
    "metadata": {},
    "source": [
-    "### 053 중간에 추가\n",
+    "### 053 리스트 중간에 추가\n",
     "movie_rank 리스트에는 아래와 같이 네 개의 영화 제목이 바인딩되어 있다. \"슈퍼맨\"을 \"닥터 스트레인지\"와 \"스플릿\" 사이에 추가하라.\n",
     "\n",
     "movie_rank = ['닥터 스트레인지', '스플릿', '럭키', '배트맨']"
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b5d027a2",
+   "id": "a1623c8e",
    "metadata": {},
    "outputs": [
     {
@@ -96,9 +96,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b8aac167",
+   "metadata": {},
+   "source": [
+    "### 054 리스트에서 삭제\n",
+    "movie 리스트에서 '럭키'를 삭제하라.\n",
+    "\n",
+    "movie = ['닥터 스트레인지', '수퍼맨', '스플릿', '럭키', '배트맨']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "7752ff82",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['닥터 스트레인지', '수퍼맨', '스플릿', '배트맨']\n"
+     ]
+    }
+   ],
+   "source": [
+    "movie = ['닥터 스트레인지', '수퍼맨', '스플릿', '럭키', '배트맨']\n",
+    "movie.remove('럭키')\n",
+    "print(movie)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "9dc0e908",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['닥터 스트레인지', '수퍼맨', '스플릿', '배트맨']\n"
+     ]
+    }
+   ],
+   "source": [
+    "movie = ['닥터 스트레인지', '수퍼맨', '스플릿', '럭키', '배트맨']\n",
+    "del movie[3]\n",
+    "print(movie)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f61bd4fc",
+   "id": "ee5e2252",
    "metadata": {},
    "outputs": [],
    "source": []
