--- a/python_algorithm/pyPractice/p051to060.ipynb
+++ b/python_algorithm/pyPractice/p051to060.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "feebf88b",
+   "id": "5da560b0",
    "metadata": {},
    "source": [
     "### 051 리스트 생성\n",
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0ce02de7",
+   "id": "1493255a",
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58a80843",
+   "id": "cca98137",
    "metadata": {},
    "source": [
     "### 052 리스트에 원소 추가\n",
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "da50cff6",
+   "id": "537c777d",
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7711ffd5",
+   "id": "88c27fac",
    "metadata": {},
    "source": [
     "### 053 리스트 중간에 추가\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a1623c8e",
+   "id": "afb30e8e",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8aac167",
+   "id": "5c3dc687",
    "metadata": {},
    "source": [
     "### 054 리스트에서 삭제\n",
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7752ff82",
+   "id": "0d9dec6e",
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "9dc0e908",
+   "id": "491ebaf6",
    "metadata": {},
    "outputs": [
     {
@@ -147,9 +147,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "75c7a1b4",
+   "metadata": {},
+   "source": [
+    "### 056 리스트 통합하기\n",
+    "lang1과 lang2 리스트가 있을 때 lang1과 lang2의 원소를 모두 갖고 있는 langs 리스트를 만들어라.\n",
+    "\n",
+    "lang1 = [\"C\", \"C++\", \"JAVA\"]\n",
+    "\n",
+    "lang2 = [\"Python\", \"Go\", \"C#\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "266d7d25",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['C', 'C++', 'JAVA', 'Python', 'Go', 'C#']\n"
+     ]
+    }
+   ],
+   "source": [
+    "lang1 = [\"C\", \"C++\", \"JAVA\"]\n",
+    "lang2 = [\"Python\", \"Go\", \"C#\"]\n",
+    "langs = lang1 + lang2\n",
+    "\n",
+    "print (langs)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee5e2252",
+   "id": "cfc8e678",
    "metadata": {},
    "outputs": [],
    "source": []
