--- a/python_algorithm/pyPractice/p051to060.ipynb
+++ b/python_algorithm/pyPractice/p051to060.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5da560b0",
+   "id": "49f72fc1",
    "metadata": {},
    "source": [
     "### 051 리스트 생성\n",
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1493255a",
+   "id": "96c33ced",
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cca98137",
+   "id": "79658e5d",
    "metadata": {},
    "source": [
     "### 052 리스트에 원소 추가\n",
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "537c777d",
+   "id": "ef6b5a3d",
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88c27fac",
+   "id": "9f82a8a7",
    "metadata": {},
    "source": [
     "### 053 리스트 중간에 추가\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "afb30e8e",
+   "id": "a1bf3e92",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c3dc687",
+   "id": "c3f68c2e",
    "metadata": {},
    "source": [
     "### 054 리스트에서 삭제\n",
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "0d9dec6e",
+   "id": "3097af77",
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "491ebaf6",
+   "id": "92e5b8c8",
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75c7a1b4",
+   "id": "eb3b40c0",
    "metadata": {},
    "source": [
     "### 056 리스트 통합하기\n",
@@ -162,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "266d7d25",
+   "id": "4a7f21ff",
    "metadata": {},
    "outputs": [
     {
@@ -182,9 +182,73 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "842d707b",
+   "metadata": {},
+   "source": [
+    "### 057 리스트에서 최대값 최소값 구하기 \n",
+    "다음 리스트에서 최댓값과 최솟값을 출력하라. (힌트: min(), max() 함수 사용)\n",
+    "\n",
+    "nums = [1, 2, 3, 4, 5, 6, 7]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "5df1a417",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "max:  7\n",
+      "min:  1\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [1, 2, 3, 4, 5, 6, 7]\n",
+    "\n",
+    "print(\"max: \", max(nums))\n",
+    "print(\"min: \", min(nums))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be136f11",
+   "metadata": {},
+   "source": [
+    "### 058 리스트의 합\n",
+    "다음 리스트의 합을 출력하라.\n",
+    "\n",
+    "nums = [1, 2, 3, 4, 5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "86fa17bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [1, 2, 3, 4, 5]\n",
+    "\n",
+    "print(sum(nums))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfc8e678",
+   "id": "042cd15b",
    "metadata": {},
    "outputs": [],
    "source": []
