--- a/python_algorithm/pyPractice/p051to060.ipynb
+++ b/python_algorithm/pyPractice/p051to060.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "49f72fc1",
+   "id": "4e59ac3b",
    "metadata": {},
    "source": [
     "### 051 리스트 생성\n",
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "96c33ced",
+   "id": "e0cef744",
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79658e5d",
+   "id": "5377d85a",
    "metadata": {},
    "source": [
     "### 052 리스트에 원소 추가\n",
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ef6b5a3d",
+   "id": "01b591e2",
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f82a8a7",
+   "id": "0d6d3dc7",
    "metadata": {},
    "source": [
     "### 053 리스트 중간에 추가\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a1bf3e92",
+   "id": "c56fe9e5",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3f68c2e",
+   "id": "4ba0c77e",
    "metadata": {},
    "source": [
     "### 054 리스트에서 삭제\n",
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "3097af77",
+   "id": "f6fbd62e",
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "92e5b8c8",
+   "id": "2b665f9d",
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb3b40c0",
+   "id": "37dcd0c3",
    "metadata": {},
    "source": [
     "### 056 리스트 통합하기\n",
@@ -162,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "4a7f21ff",
+   "id": "6a9d3fba",
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "842d707b",
+   "id": "3b1ce779",
    "metadata": {},
    "source": [
     "### 057 리스트에서 최대값 최소값 구하기 \n",
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "5df1a417",
+   "id": "61371196",
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be136f11",
+   "id": "fe47d646",
    "metadata": {},
    "source": [
     "### 058 리스트의 합\n",
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "86fa17bb",
+   "id": "8ce28571",
    "metadata": {},
    "outputs": [
     {
@@ -246,9 +246,73 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "277acf69",
+   "metadata": {},
+   "source": [
+    "### 059 리스트 원소 개수 출력하기\n",
+    "다음 리스트에 저장된 데이터의 개수를 화면에 구하하라.\n",
+    "\n",
+    "food = [\"피자\", \"김밥\", \"만두\", \"양념치킨\", \"족발\", \"피자\", \"김치만두\", \"쫄면\", \"쏘세지\", \"라면\", \"팥빙수\", \"김치전\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "28f4cb7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "food = [\"피자\", \"김밥\", \"만두\", \"양념치킨\", \"족발\", \"피자\", \"김치만두\", \"쫄면\", \"쏘세지\", \"라면\", \"팥빙수\", \"김치전\"]\n",
+    "\n",
+    "print(len(food))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04a75fa3",
+   "metadata": {},
+   "source": [
+    "### 060 리스트 원소 평균값 출력하기\n",
+    "다음 리스트의 평균을 출력하라.\n",
+    "\n",
+    "nums = [1, 2, 3, 4, 5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "03c00c3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [1, 2, 3, 4, 5]\n",
+    "\n",
+    "average = sum(nums) / len(nums)\n",
+    "\n",
+    "print (average)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "042cd15b",
+   "id": "1ab88133",
    "metadata": {},
    "outputs": [],
    "source": []
