--- a/python_algorithm/pyPractice/p061to070.ipynb
+++ b/python_algorithm/pyPractice/p061to070.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d79460d3",
+   "id": "d5c8faf7",
    "metadata": {},
    "source": [
     "### 061\n",
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "db4180a3",
+   "id": "b32c0fc8",
    "metadata": {},
    "outputs": [
     {
@@ -32,9 +32,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8d821f76",
+   "metadata": {},
+   "source": [
+    "### 062\n",
+    "슬라이싱을 사용해서 홀수만 출력하라.\n",
+    "\n",
+    "nums = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "520a0b8b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 5, 7, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "\n",
+    "print(nums[::2])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e26a584",
+   "id": "14d0d0fa",
    "metadata": {},
    "outputs": [],
    "source": []
