added: p063 str slicing.

--- a/python_algorithm/pyPractice/p061to070.ipynb
+++ b/python_algorithm/pyPractice/p061to070.ipynb
@@ -63,9 +63,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "04b9365c",
+   "metadata": {},
+   "source": [
+    "### 063\n",
+    "슬라이싱을 사용해서 짝수만 출력하라.\n",
+    "\n",
+    "nums = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a5b4a4bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "\n",
+    "print(nums[1::2])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14d0d0fa",
+   "id": "983cbead",
    "metadata": {},
    "outputs": [],
    "source": []
