--- a/python_algorithm/pyPractice/p061to070.ipynb
+++ b/python_algorithm/pyPractice/p061to070.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04b9365c",
+   "id": "fa922052",
    "metadata": {},
    "source": [
     "### 063\n",
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a5b4a4bf",
+   "id": "9135c381",
    "metadata": {},
    "outputs": [
     {
@@ -94,9 +94,75 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1fb8ab04",
+   "metadata": {},
+   "source": [
+    "### 064\n",
+    "슬라이싱을 사용해서 리스트의 숫자를 역 방향으로 출력하라.\n",
+    "\n",
+    "nums = [1, 2, 3, 4, 5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "81212882",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 4, 3, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [1, 2, 3, 4, 5]\n",
+    "\n",
+    "print(nums[::-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97e43db6",
+   "metadata": {},
+   "source": [
+    "### 065\n",
+    "interest 리스트에는 아래의 데이터가 바인딩되어 있다.\n",
+    "\n",
+    "interest = ['삼성전자', 'LG전자', 'Naver']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ae730251",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['삼성전자', 'Naver']\n",
+      "삼성전자 Naver\n"
+     ]
+    }
+   ],
+   "source": [
+    "interest = ['삼성전자', 'LG전자', 'Naver']\n",
+    "\n",
+    "print(interest[::2])\n",
+    "\n",
+    "# 정답\n",
+    "print(interest[0], interest[2])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "983cbead",
+   "id": "1ae7a78e",
    "metadata": {},
    "outputs": [],
    "source": []
