--- a/python_algorithm/pyPractice/p061to070.ipynb
+++ b/python_algorithm/pyPractice/p061to070.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa922052",
+   "id": "327d87bd",
    "metadata": {},
    "source": [
     "### 063\n",
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9135c381",
+   "id": "9237c15c",
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fb8ab04",
+   "id": "61567808",
    "metadata": {},
    "source": [
     "### 064\n",
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "81212882",
+   "id": "e4759e36",
    "metadata": {},
    "outputs": [
     {
@@ -126,19 +126,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97e43db6",
+   "id": "4b24cd91",
    "metadata": {},
    "source": [
     "### 065\n",
     "interest 리스트에는 아래의 데이터가 바인딩되어 있다.\n",
     "\n",
-    "interest = ['삼성전자', 'LG전자', 'Naver']"
+    "interest = ['삼성전자', 'LG전자', 'Naver']\n",
+    "\n",
+    "interest 리스트를 사용하여 아래와 같이 화면에 출력하라.\n",
+    "\n",
+    "출력 예시:\n",
+    "<br>삼성전자 Naver"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ae730251",
+   "id": "c79ae06a",
    "metadata": {},
    "outputs": [
     {
@@ -160,9 +165,136 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6717ec68",
+   "metadata": {},
+   "source": [
+    "### 066 join 메서드\n",
+    "interest 리스트에는 아래의 데이터가 바인딩되어 있다.\n",
+    "\n",
+    "interest = ['삼성전자', 'LG전자', 'Naver', 'SK하이닉스', '미래에셋대우']\n",
+    "\n",
+    "interest 리스트를 사용하여 아래와 같이 화면에 출력하라.\n",
+    "\n",
+    "출력 예시:\n",
+    "<br>삼성전자 LG전자 Naver SK하이닉스 미래에셋대우"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "6c0e0b36",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "삼성전자 LG전자 Naver SK하이닉스 미래에셋대우\n"
+     ]
+    }
+   ],
+   "source": [
+    "interest = ['삼성전자', 'LG전자', 'Naver', 'SK하이닉스', '미래에셋대우']\n",
+    "\n",
+    "print(\" \".join(interest))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "816d57cd",
+   "metadata": {},
+   "source": [
+    "### Definition\n",
+    "The join() method takes all items in an iterable and joins them into one string.\n",
+    "\n",
+    "A string must be specified as the separator."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ac9172e",
+   "metadata": {},
+   "source": [
+    "### 067 join 메서드\n",
+    "interest 리스트에는 아래의 데이터가 바인딩되어 있다.\n",
+    "\n",
+    "interest = ['삼성전자', 'LG전자', 'Naver', 'SK하이닉스', '미래에셋대우']\n",
+    "\n",
+    "interest 리스트를 사용하여 아래와 같이 화면에 출력하라.\n",
+    "\n",
+    "출력 예시:\n",
+    "<br>삼성전자/LG전자/Naver/SK하이닉스/미래에셋대우"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "c56347e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "삼성전자/LG전자/Naver/SK하이닉스/미래에셋대우\n"
+     ]
+    }
+   ],
+   "source": [
+    "interest = ['삼성전자', 'LG전자', 'Naver', 'SK하이닉스', '미래에셋대우']\n",
+    "\n",
+    "print(\"/\".join(interest))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41a8eb33",
+   "metadata": {},
+   "source": [
+    "### 068 join 메서드\n",
+    "interest 리스트에는 아래의 데이터가 바인딩되어 있다.\n",
+    "\n",
+    "interest = ['삼성전자', 'LG전자', 'Naver', 'SK하이닉스', '미래에셋대우']\n",
+    "\n",
+    "join() 메서드를 사용해서 interest 리스트를 아래와 같이 화면에 출력하라.\n",
+    "\n",
+    "출력 예시:\n",
+    "<br>삼성전자\n",
+    "<br>LG전자\n",
+    "<br>Naver\n",
+    "<br>SK하이닉스\n",
+    "<br>미래에셋대우"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d380af86",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "삼성전자\n",
+      "LG전자\n",
+      "Naver\n",
+      "SK하이닉스\n",
+      "미래에셋대우\n"
+     ]
+    }
+   ],
+   "source": [
+    "interest = ['삼성전자', 'LG전자', 'Naver', 'SK하이닉스', '미래에셋대우']\n",
+    "\n",
+    "print(\"\\n\".join(interest))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ae7a78e",
+   "id": "ca7698ff",
    "metadata": {},
    "outputs": [],
    "source": []
