--- a/python_algorithm/pyPractice/p061to070.ipynb
+++ b/python_algorithm/pyPractice/p061to070.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "327d87bd",
+   "id": "738fa430",
    "metadata": {},
    "source": [
     "### 063\n",
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9237c15c",
+   "id": "b2b3a1eb",
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61567808",
+   "id": "2e7bfae2",
    "metadata": {},
    "source": [
     "### 064\n",
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e4759e36",
+   "id": "6db47839",
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b24cd91",
+   "id": "4d0f9028",
    "metadata": {},
    "source": [
     "### 065\n",
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c79ae06a",
+   "id": "16949b89",
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6717ec68",
+   "id": "0382d7d5",
    "metadata": {},
    "source": [
     "### 066 join 메서드\n",
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "6c0e0b36",
+   "id": "698566fd",
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "816d57cd",
+   "id": "ce3935de",
    "metadata": {},
    "source": [
     "### Definition\n",
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ac9172e",
+   "id": "3ae8c358",
    "metadata": {},
    "source": [
     "### 067 join 메서드\n",
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "c56347e2",
+   "id": "0b7f8e01",
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41a8eb33",
+   "id": "fa6d65be",
    "metadata": {},
    "source": [
     "### 068 join 메서드\n",
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "d380af86",
+   "id": "c3a1927f",
    "metadata": {},
    "outputs": [
     {
@@ -292,9 +292,78 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6966492f",
+   "metadata": {},
+   "source": [
+    "### 069 문자열 split 메서드\n",
+    "회사 이름이 슬래시 ('/')로 구분되어 하나의 문자열로 저장되어 있다.\n",
+    "\n",
+    "string = \"삼성전자/LG전자/Naver\"\n",
+    "\n",
+    "이를 interest 이름의 리스트로 분리 저장하라.\n",
+    "\n",
+    "실행 예시\n",
+    "<br>>> print(interest)\n",
+    "<br>['삼성전자', 'LG전자', 'Naver']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "cff08793",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['삼성전자', 'LG전자', 'Naver']\n"
+     ]
+    }
+   ],
+   "source": [
+    "string = \"삼성전자/LG전자/Naver\"\n",
+    "interest = string.split(\"/\")\n",
+    "print(interest)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0f28c43",
+   "metadata": {},
+   "source": [
+    "### 070 리스트 정렬\n",
+    "리스트에 있는 값을 오름차순으로 정렬하세요.\n",
+    "\n",
+    "data = [2, 4, 3, 1, 5, 10, 9]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "ba58fb61",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 9, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = [2, 4, 3, 1, 5, 10, 9]\n",
+    "\n",
+    "\n",
+    "print(sorted(data))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca7698ff",
+   "id": "4b73efba",
    "metadata": {},
    "outputs": [],
    "source": []
