--- a/python_algorithm/pyPractice/p71to80.ipynb
+++ b/python_algorithm/pyPractice/p71to80.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "850e02e6",
+   "id": "dda0e95e",
    "metadata": {},
    "source": [
     "### 071\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2da7caf4",
+   "id": "26ad1528",
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac71fad7",
+   "id": "084a39ff",
    "metadata": {},
    "source": [
     "### 072\n",
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "20fa8c11",
+   "id": "a4e00576",
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7986855",
+   "id": "127148d1",
    "metadata": {},
    "source": [
     "### 073\n",
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f248f476",
+   "id": "9e6baa3e",
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ef5d534",
+   "id": "07aadda2",
    "metadata": {},
    "source": [
     "하나의 데이터가 튜플에 저장되는 경우 ,를 넣어줘야 됨."
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c50254ed",
+   "id": "f34c0998",
    "metadata": {},
    "source": [
     "### 075\n",
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3e2c7522",
+   "id": "71139909",
    "metadata": {},
    "outputs": [
     {
@@ -132,16 +132,114 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53c6dee1",
+   "id": "d204ee8c",
    "metadata": {},
    "source": [
     "원칙적으로 튜플은 괄호와 함께 데이터를 정의해야 하지만, 사용자 편의를 위해 괄호 없이도 동작합니다. "
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ec0690fb",
+   "metadata": {},
+   "source": [
+    "### 076\n",
+    "변수 t에는 아래와 같은 값이 저장되어 있다. 변수 t가 ('A', 'b', 'c') 튜플을 가리키도록 수정 하라.\n",
+    "\n",
+    "t = ('a', 'b', 'c')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "de0438fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('A', 'b', 'c')\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = ('a', 'b', 'c')\n",
+    "\n",
+    "# 튜플은 수정불가. 따라서, 새로 재정의 해줘야함.\n",
+    "t = ('A', 'b', 'c')\n",
+    "\n",
+    "print(t)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b96e128",
+   "metadata": {},
+   "source": [
+    "### 077\n",
+    "다음 튜플을 리스트로 변환하라.\n",
+    "\n",
+    "interest = ('삼성전자', 'LG전자', 'SK Hynix')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "cc9a0098",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "interest = ('삼성전자', 'LG전자', 'SK Hynix')\n",
+    "data = list(interest)\n",
+    "\n",
+    "print(type(data))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70dfc6b2",
+   "metadata": {},
+   "source": [
+    "### 078\n",
+    "다음 리스트를 튜플로 변경하라.\n",
+    "\n",
+    "interest = ['삼성전자', 'LG전자', 'SK Hynix']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "3947da57",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "interest = ['삼성전자', 'LG전자', 'SK Hynix']\n",
+    "data = tuple(interest)\n",
+    "\n",
+    "print(type(data))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb910b78",
+   "id": "cf1b5a17",
    "metadata": {},
    "outputs": [],
    "source": []
