--- a/python_algorithm/pyPractice/p71to80.ipynb
+++ b/python_algorithm/pyPractice/p71to80.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "dda0e95e",
+   "id": "98e058a6",
    "metadata": {},
    "source": [
     "### 071\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "26ad1528",
+   "id": "3aaabfa6",
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "084a39ff",
+   "id": "a19f6c67",
    "metadata": {},
    "source": [
     "### 072\n",
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a4e00576",
+   "id": "5092ee35",
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "127148d1",
+   "id": "f86abb7f",
    "metadata": {},
    "source": [
     "### 073\n",
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9e6baa3e",
+   "id": "7b6fa45e",
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07aadda2",
+   "id": "128d73be",
    "metadata": {},
    "source": [
     "하나의 데이터가 튜플에 저장되는 경우 ,를 넣어줘야 됨."
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f34c0998",
+   "id": "eacf321f",
    "metadata": {},
    "source": [
     "### 075\n",
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "71139909",
+   "id": "f315039a",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d204ee8c",
+   "id": "a55dddfd",
    "metadata": {},
    "source": [
     "원칙적으로 튜플은 괄호와 함께 데이터를 정의해야 하지만, 사용자 편의를 위해 괄호 없이도 동작합니다. "
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec0690fb",
+   "id": "cc943581",
    "metadata": {},
    "source": [
     "### 076\n",
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "de0438fd",
+   "id": "44332af3",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b96e128",
+   "id": "6f312247",
    "metadata": {},
    "source": [
     "### 077\n",
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "cc9a0098",
+   "id": "3d43bec3",
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70dfc6b2",
+   "id": "91889406",
    "metadata": {},
    "source": [
     "### 078\n",
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3947da57",
+   "id": "fa19395e",
    "metadata": {},
    "outputs": [
     {
@@ -237,9 +237,72 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9c43c1e5",
+   "metadata": {},
+   "source": [
+    "### 079 튜플 언팩킹\n",
+    "다음 코드의 실행 결과를 예상하라.\n",
+    "\n",
+    "temp = ('apple', 'banana', 'cake')\n",
+    "<br>a, b, c = temp\n",
+    "<br>print(a, b, c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "6c5a1678",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple banana cake\n"
+     ]
+    }
+   ],
+   "source": [
+    "temp = ('apple', 'banana', 'cake')\n",
+    "a, b, c = temp\n",
+    "print(a, b, c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "750e5d3d",
+   "metadata": {},
+   "source": [
+    "### 080 range 함수\n",
+    "1 부터 99까지의 정수 중 짝수만 저장된 튜플을 생성하라.\n",
+    "\n",
+    "(2, 4, 6, 8 ... 98)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "7d073b32",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30, 32, 34, 36, 38, 40, 42, 44, 46, 48, 50, 52, 54, 56, 58, 60, 62, 64, 66, 68, 70, 72, 74, 76, 78, 80, 82, 84, 86, 88, 90, 92, 94, 96, 98)\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = tuple(range(2, 100, 2))\n",
+    "print(data)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf1b5a17",
+   "id": "3b2aa78d",
    "metadata": {},
    "outputs": [],
    "source": []
