added: p92 & 93. Dictionary indexing.

--- a/python_algorithm/pyPractice/p081to090.ipynb
+++ b/python_algorithm/pyPractice/p081to090.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a5121f13",
+   "id": "657413f2",
    "metadata": {},
    "source": [
     "### 091 딕셔너리 생성\n",
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7d5e4b7a",
+   "id": "8fad9105",
    "metadata": {},
    "outputs": [
     {
@@ -35,9 +35,77 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4f59c15f",
+   "metadata": {},
+   "source": [
+    "### 092 딕셔너리 인덱싱\n",
+    "inventory 딕셔너리에서 메로나의 가격을 화면에 출력하라.\n",
+    "\n",
+    "> inventory = {\"메로나\": [300, 20],\n",
+    "              \"비비빅\": [400, 3],\n",
+    "              \"죠스바\": [250, 100]}\n",
+    "              \n",
+    "> 실행 예시:\n",
+    "300 원"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "eb33b3e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "300 원\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(inventory[\"메로나\"][0], \"원\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "add9a427",
+   "metadata": {},
+   "source": [
+    "### 093 딕셔너리 인덱싱\n",
+    "inventory 딕셔너리에서 메로나의 재고를 화면에 출력하라.\n",
+    "\n",
+    "> inventory = {\"메로나\": [300, 20],\n",
+    "              \"비비빅\": [400, 3],\n",
+    "              \"죠스바\": [250, 100]}\n",
+    "\n",
+    "> 실행 예시:\n",
+    "20 개"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "e398ee92",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20 개\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(inventory[\"메로나\"][1], \"개\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5eb36af",
+   "id": "b4c01b0f",
    "metadata": {},
    "outputs": [],
    "source": []
