added: rest of problems

--- a/python_algorithm/pyPractice/p081to090.ipynb
+++ b/python_algorithm/pyPractice/p081to090.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c5dc03db",
+   "id": "c0452c53",
    "metadata": {},
    "source": [
     "### 081 별 표현식\n",
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "be6ddf5c",
+   "id": "25e34843",
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c849fb3",
+   "id": "70ce02e1",
    "metadata": {},
    "source": [
     "### 082\n",
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7ab9fe00",
+   "id": "b30d5cb0",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "674d8c88",
+   "id": "90c5b0b5",
    "metadata": {},
    "source": [
     "### 083\n",
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "61b3af2f",
+   "id": "08faf540",
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "112700f5",
+   "id": "35fc4231",
    "metadata": {},
    "source": [
     "### 084 비어있는 딕셔너리\n",
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ff449d09",
+   "id": "1cfdeed9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d159ba6",
+   "id": "96e1b133",
    "metadata": {},
    "source": [
     "### 085\n",
@@ -138,13 +138,168 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "58032749",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "icecream = {\"메로나\" : 1000, \"폴라포\" : 1200, \"빵빠레\" : 1800}\n",
+    "\n",
+    "print(type(icecream))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87940e06",
+   "metadata": {},
+   "source": [
+    "### 086 정보추가\n",
+    "085 번의 딕셔너리에 아래 아이스크림 가격정보를 추가하라.\n",
+    "\n",
+    "이름\t희망 가격\n",
+    "<br>죠스바\t1200\n",
+    "<br>월드콘\t1500"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a1b3df50",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'메로나': 1000, '폴라포': 1200, '빵빠레': 1800, '죠스바': 1200, '월드콘': 1500}\n"
+     ]
+    }
+   ],
+   "source": [
+    "icecream = {\"메로나\" : 1000, \"폴라포\" : 1200, \"빵빠레\" : 1800}\n",
+    "icecream[\"죠스바\"] = 1200\n",
+    "icecream[\"월드콘\"] = 1500\n",
+    "\n",
+    "print (icecream)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc8b77c1",
+   "metadata": {},
+   "source": [
+    "### 087 정보출력\n",
+    "다음 딕셔너리를 사용하여 메로나 가격을 출력하라.\n",
+    "\n",
+    "ice = {'메로나': 1000,\n",
+    "       '폴로포': 1200,\n",
+    "       '빵빠레': 1800,\n",
+    "       '죠스바': 1200,\n",
+    "       '월드콘': 1500}\n",
+    "       "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "d545ea1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "메로나 가격:  1000\n"
+     ]
+    }
+   ],
+   "source": [
+    "ice = {'메로나': 1000, '폴로포': 1200, '빵빠레': 1800, '죠스바': 1200, '월드콘': 1500}\n",
+    "\n",
+    "print(\"메로나 가격: \", ice[\"메로나\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "865a26b4",
+   "metadata": {},
+   "source": [
+    "### 088 정보수정\n",
+    "다음 딕셔너리에서 메로나의 가격을 1300으로 수정하라.\n",
+    "\n",
+    "ice = {'메로나': 1000, '폴로포': 1200, '빵빠레': 1800, '죠스바': 1200, '월드콘': 1500}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "ec294434",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'메로나': 1300, '폴로포': 1200, '빵빠레': 1800, '죠스바': 1200, '월드콘': 1500}\n"
+     ]
+    }
+   ],
+   "source": [
+    "ice = {'메로나': 1000, '폴로포': 1200, '빵빠레': 1800, '죠스바': 1200, '월드콘': 1500}\n",
+    "\n",
+    "ice[\"메로나\"] = 1300\n",
+    "\n",
+    "print (ice)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb96ac7d",
+   "metadata": {},
+   "source": [
+    "### 089 정보삭제\n",
+    "다음 딕셔너리에서 메로나를 삭제하라.\n",
+    "\n",
+    "ice = {'메로나': 1000, '폴로포': 1200, '빵빠레': 1800, '죠스바': 1200, '월드콘': 1500}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "c4102547",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'폴로포': 1200, '빵빠레': 1800, '죠스바': 1200, '월드콘': 1500}\n"
+     ]
+    }
+   ],
+   "source": [
+    "ice = {'메로나': 1000, '폴로포': 1200, '빵빠레': 1800, '죠스바': 1200, '월드콘': 1500}\n",
+    "\n",
+    "del ice[\"메로나\"]\n",
+    "\n",
+    "print (ice)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "67bd6ad4",
+   "id": "0f4d6d12",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df"
-   ]
+   "source": []
   }
  ],
  "metadata": {
