--- a/python_algorithm/pyPractice/p091to100.ipynb
+++ b/python_algorithm/pyPractice/p091to100.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "657413f2",
+   "id": "f6465305",
    "metadata": {},
    "source": [
     "### 091 딕셔너리 생성\n",
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8fad9105",
+   "id": "97ecc7a1",
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f59c15f",
+   "id": "27f54f57",
    "metadata": {},
    "source": [
     "### 092 딕셔너리 인덱싱\n",
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "eb33b3e5",
+   "id": "30acb619",
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "add9a427",
+   "id": "d32906f5",
    "metadata": {},
    "source": [
     "### 093 딕셔너리 인덱싱\n",
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e398ee92",
+   "id": "236dcf0c",
    "metadata": {},
    "outputs": [
     {
@@ -103,12 +103,183 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e31263d1",
+   "metadata": {},
+   "source": [
+    "### 094 딕셔너리 추가\n",
+    "inventory 딕셔너리에 아래 데이터를 추가하라.\n",
+    "\n",
+    "> inventory = {\"메로나\": [300, 20],\n",
+    "              \"비비빅\": [400, 3],\n",
+    "              \"죠스바\": [250, 100]}\n",
+    "\n",
+    "이름\t가격\t재고\n",
+    "<br>월드콘\t500\t7\n",
+    "\n",
+    "실행 예시:\n",
+    "<br>print(inventory)\n",
+    "<br>{'메로나': [300, 20], '비비빅': [400, 3], '죠스바': [250, 100], '월드콘': [500, 7]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ef0169c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'메로나': [300, 20], '비비빅': [400, 3], '죠스바': [250, 100], '월드콘': [500, 7]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "inventory = {\"메로나\": [300, 20], \"비비빅\": [400, 3], \"죠스바\": [250, 100]}\n",
+    "inventory[\"월드콘\"] = [500, 7]\n",
+    "\n",
+    "print (inventory)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c1d810e",
+   "metadata": {},
+   "source": [
+    "### 095"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "33cef964",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['탱크보이', '폴라포', '빵빠레', '월드콘', '메로나'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "icecream = {'탱크보이': 1200, '폴라포': 1200, '빵빠레': 1800, '월드콘': 1500, '메로나': 1000}\n",
+    "\n",
+    "print(icecream.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "8a608b5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['탱크보이', '폴라포', '빵빠레', '월드콘', '메로나']\n"
+     ]
+    }
+   ],
+   "source": [
+    "icecream = {'탱크보이': 1200, '폴라포': 1200, '빵빠레': 1800, '월드콘': 1500, '메로나': 1000}\n",
+    "ice = list(icecream.keys())\n",
+    "print(ice)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "500aebe4",
+   "metadata": {},
+   "source": [
+    "### 096"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a52cda69",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['탱크보이', '폴라포', '빵빠레', '월드콘', '메로나']\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a30b3efa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1200, 1200, 1800, 1500, 1000]\n"
+     ]
+    }
+   ],
+   "source": [
+    "icecream = {'탱크보이': 1200, '폴라포': 1200, '빵빠레': 1800, '월드콘': 1500, '메로나': 1000}\n",
+    "price = list(icecream.values())\n",
+    "print(price)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04e059f6",
+   "metadata": {},
+   "source": [
+    "### 097\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "2bbbb843",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6700\n"
+     ]
+    }
+   ],
+   "source": [
+    "icecream = {'탱크보이': 1200, '폴라포': 1200, '빵빠레': 1800, '월드콘': 1500, '메로나': 1000}\n",
+    "print(sum(list(icecream.values())))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4972eb2e",
+   "metadata": {},
+   "source": [
+    "### 098\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4c01b0f",
+   "id": "7f818f8c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "icecream = {'탱크보이': 1200, '폴라포': 1200, '빵빠레': 1800, '월드콘': 1500, '메로나': 1000}\n",
+    "new_product = {'팥빙수':2700, '아맛나':1000}"
+   ]
   }
  ],
  "metadata": {
