--- a/python_algorithm/pyPractice/p091to100.ipynb
+++ b/python_algorithm/pyPractice/p091to100.ipynb
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c1d810e",
+   "id": "d1386735",
    "metadata": {},
    "source": [
     "### 095"
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "33cef964",
+   "id": "a6ac6c4c",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8a608b5b",
+   "id": "a7e67611",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "500aebe4",
+   "id": "32847a47",
    "metadata": {},
    "source": [
     "### 096"
@@ -202,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a52cda69",
+   "id": "3f3652ee",
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a30b3efa",
+   "id": "5f90ca9e",
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04e059f6",
+   "id": "9bcfa00b",
    "metadata": {},
    "source": [
     "### 097\n"
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2bbbb843",
+   "id": "68ebb862",
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4972eb2e",
+   "id": "df394e1d",
    "metadata": {},
    "source": [
     "### 098\n"
@@ -272,14 +272,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7f818f8c",
+   "execution_count": 9,
+   "id": "8e7ba317",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'탱크보이': 1200, '폴라포': 1200, '빵빠레': 1800, '월드콘': 1500, '메로나': 1000, '팥빙수': 2700, '아맛나': 1000}\n"
+     ]
+    }
+   ],
    "source": [
     "icecream = {'탱크보이': 1200, '폴라포': 1200, '빵빠레': 1800, '월드콘': 1500, '메로나': 1000}\n",
-    "new_product = {'팥빙수':2700, '아맛나':1000}"
+    "new_product = {'팥빙수':2700, '아맛나':1000}\n",
+    "\n",
+    "icecream.update(new_product)\n",
+    "print(icecream)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05f0637b",
+   "metadata": {},
+   "source": [
+    "### 099"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9bff5554",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'apple': 300, 'pear': 250, 'peach': 400}\n"
+     ]
+    }
+   ],
+   "source": [
+    "keys = (\"apple\", \"pear\", \"peach\")\n",
+    "vals = (300, 250, 400)\n",
+    "\n",
+    "result = dict(zip(keys, vals))\n",
+    "print (result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8b5099f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
